<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient_list"
android:id="@+id/dashboard_Activity"
tools:context=".DashboardActivity">
<TextView
    android:id="@+id/dashboard_Activity_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:textAlignment="center"
    android:text="@string/on_light_dashboard"
    android:textSize="30sp"
    android:textStyle="bold"
    android:fontFamily="@font/janna"
    android:layout_marginTop="10dp"
    />
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/dashboard_Activity_title"
    android:rowCount="3"
    android:columnCount="2"
    android:layout_margin="20dp"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
                android:id="@+id/setting_solar_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sun"/>
            <TextView
                android:id="@+id/dash_solar_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_one"
                android:fontFamily="@font/janna"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
                android:id="@+id/setting_on_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/on_off_1"/>
            <TextView
                android:id="@+id/dash_on_off_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_two"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/janna"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/dash_card_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:id="@+id/dash_monitor_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor_1" />
            <TextView
                android:id="@+id/dash_monitor_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_three"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/janna"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
                android:id="@+id/setting_damage_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/damage_1"/>
            <TextView
                android:id="@+id/dash_damage_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_four"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/janna"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dash_card_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
                android:id="@+id/setting_Synchronization_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/synchronization_1"/>
            <TextView
                android:id="@+id/dash_Synchronization_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_five"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/janna"
                android:textSize="16sp"/>/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal">
            <ImageView
                android:id="@+id/setting_icon_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_2"/>
            <TextView
                android:id="@+id/dash_setting_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/feature_six"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/janna"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</GridLayout>
</RelativeLayout>